tests/bad/function_incorrect_arg_type.mu
fn f(a: int) {
    let mut b = a
}

let mut x = box 3

f(x)